# rust-hello-world

./: Cargo.toml  Dockerfile  README.md  k8s-manifest.yaml
.github/workflows/: blank.yml
src/: main.rs
