[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dev dependencies for tests
[dev-dependencies]
actix-rt = "2.5"  # Needed for async testing
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
